--- a/.gitignore
+++ b/.gitignore
@@ -112,6 +112,7 @@ like_share_days_wise.csv
 output_data.csv
 query_result.csv
 week_day.csv
+diabetes.csv
 deep_learning/.ipynb_checkpoints/
 deep_learning/Untitled*.ipynb
 corpora/
